[project]
name = "mcp_data_visualization"
version = "0.1.0"
description = "MCP Server for mcp_data_visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "streamlit>=1.24.0",
    "pandas>=1.5.0",
    "geopandas>=1.0.1",
    "plotly>=5.13.0",
    "streamlit_folium>=0.25.0",
    "streamlit-autorefresh>=1.0.1",
    "pycountry>=24.6.1",
    "zipcodes>=1.3.0",
    "snowflake-connector-python>=3.0.0"
]

[project.scripts]
mcp_data_visualization = "mcp_data_visualization:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
